fix filter sticky position on mobile

--- a/src/app/money/analytics/analytics.component.css
+++ b/src/app/money/analytics/analytics.component.css
@@ -9,3 +9,9 @@
 .collapse-button {
   min-width: 0;
 }
+
+@media screen and (max-width: 959px) {
+  .filter-container {
+    top: 0px;
+  }
+}
